# symbolic_math

./: Cargo.toml  README.md
src/: eval.rs  expr.rs  lib.rs  main.rs  operations.rs  simplify.rs  symbol.rs
src/expr/: eval.rs  expansion.rs  operations.rs  simplify.rs
